# storm-compositional

./: CMakeLists.txt  Dockerfile
compose-benchmark/: .gitignore  benchmark.py  benchmark_set_main.py  benchmark_set_reduced.py  data_processor.py  error_check.sh  macros.tex.template  plots.tex.template  process_last.sh  results_plot_generator.py  tables_generator.py  validator.py
compose-benchmark/models/BichainsBig/: BichainsBig10.json  BichainsBig100.json  BichainsBig1000.json  BichainsBig1500.json  BichainsBig2.json  BichainsBig20.json  BichainsBig200.json  BichainsBig2000.json  BichainsBig50.json  BichainsBig500.json  bichains.template  bichains_generator.py  calm_safe.prism  calm_unsafe.prism  final.prism  generate_chains.sh  initial.prism  windy_safe.prism  windy_safe_template.prism  windy_unsafe.prism
compose-benchmark/models/Birooms3/: Birooms3-10.json  Birooms3-100.json  Birooms3-20.json  Birooms3-3.json  Birooms3-50.json  Birooms3-500.json  calm_safe.prism  generate_rooms.sh  rooms.template  (+2 more)
src/: CMakeLists.txt
src/storm-compose/: CMakeLists.txt
src/storm-compose-cli/: CMakeLists.txt  storm-compose.cpp
src/storm-compose-cli/settings/: ComposeSettings.cpp  ComposeSettings.h
src/storm-compose-cli/settings/modules/: ComposeIOSettings.cpp  ComposeIOSettings.h
src/storm-compose/benchmark/: BenchmarkStats.h
src/storm-compose/builder/: FlatMdpBuilder.cpp  FlatMdpBuilder.h
src/storm-compose/modelchecker/: AbstractOpenMdpChecker.h  ApproximateReachabilityResult.cpp  ApproximateReachabilityResult.h  CompositionalValueIteration.cpp  CompositionalValueIteration.h  CompositionalValueVector.cpp  CompositionalValueVector.h  HeuristicValueIterator.cpp  HeuristicValueIterator.h  MonolithicOpenMdpChecker.cpp  MonolithicOpenMdpChecker.h  NaiveOpenMdpChecker.cpp  NaiveOpenMdpChecker.h  NaiveOpenMdpChecker2.cpp  NaiveOpenMdpChecker2.h  OviStepUpdater.cpp  OviStepUpdater.h  ProperOviTermination.cpp  ProperOviTermination.h  PropertyDrivenOpenMdpChecker.cpp  PropertyDrivenOpenMdpChecker.h  ValueVector.cpp  ValueVector.h  WeightedOpenMdpChecker.cpp  WeightedOpenMdpChecker.h
src/storm-compose/models/: ConcreteMdp.cpp  ConcreteMdp.h  OpenMdp.cpp  OpenMdp.h  OpenMdpManager.cpp  OpenMdpManager.h  PrismModel.cpp  PrismModel.h  Reference.cpp  Reference.h  SequenceModel.cpp  SequenceModel.h  SumModel.cpp  SumModel.h  TraceModel.cpp  TraceModel.h
src/storm-compose/models/visitor/: BenchmarkStatsVisitor.cpp  BenchmarkStatsVisitor.h  BidirectionalReachabilityResult.cpp  BidirectionalReachabilityResult.h  BottomUpTermination.cpp  BottomUpTermination.h  CVIVisitor.cpp  CVIVisitor.h  EntranceExitMappingVisitor.cpp  EntranceExitMappingVisitor.h  EntranceExitVisitor.h  FlatMdpBuilderVisitor.cpp  FlatMdpBuilderVisitor.h  HeuristicCVIVisitor.h  LeafTransformer.cpp  LeafTransformer.h  LowerUpperParetoVisitor.cpp  LowerUpperParetoVisitor.h  MappingVisitor.cpp  MappingVisitor.h  OpenMdpPrintVisitor.h  OpenMdpToDotVisitor.h  OpenMdpVisitor.h  OuterEntranceExitVisitor.h  ParetoInitializerVisitor.h  ParetoVisitor.cpp  ParetoVisitor.h  PrismToConcreteVisitor.h  PropertyDrivenVisitor.cpp  PropertyDrivenVisitor.h  SingleCVIVisitor.h  SymbioticTermination.cpp  SymbioticTermination.h  TrueParetoVisitor.cpp  TrueParetoVisitor.h
src/storm-compose/parser/: JsonStringDiagramParser.cpp  JsonStringDiagramParser.h  StateValuationParser.cpp  StateValuationParser.h
src/storm-compose/storage/: AbstractCache.h  AbstractParetoCurve.h  EntranceExit.cpp  EntranceExit.h  ExactCache.cpp  ExactCache.h  NoCache.cpp  NoCache.h  ParetoCache.cpp  ParetoCache.h  ValueVector.cpp  ValueVector.h  ValueVectorMapping.cpp  ValueVectorMapping.h
src/test/: CMakeLists.txt
src/test/storm-compose/: CMakeLists.txt  storm-test.cpp
src/test/storm-compose/modelchecking/: BasicModelchecking.cpp
(+270 files in other folders)
